# cr-project

./: .gitignore  CLAUDE.md  LICENSE  README.md  inference.sh  main.ipynb  main.py  pyproject.toml  test.py  test_a.py  test_dummy.py  tmp_main_base.py  tmp_main_overfit_sanity.py  tmp_main_xmodal1.py  tmp_main_xmodal2.py  train.sh
.githooks/: pre-commit
artifacts/0.show/: clear_net_scene_demo.py
docs/: 2026-04-04-experiment-report.html  2026-04-04-experiment-report.md  2026-04-05-SDI-module-proposal.md  2026-04-30-density-eval-progress.html  2026-04-30-density-eval-progress.md  IDEA_REPORT.html  benchmarks.md  density-main-porting-source.md
docs/SAR-ULRTC-CR/: README.md  dataLoader.py  dataset_preprocessing.ipynb  environment.yaml  main_net.py  test_new_4_comp_trans_RGB_real_M_8_1.py  train_new_4_comp_trans_RGB_SEN12MSCR_8_5.py  기말 연구 방향.html
modules/loss_fn/: CAFM_loss.py  __init__.py  clear_net_loss.py  fdt_loss.py  focal_frequency_loss.py  frequency_loss.py  hybrid_loss.py  lcr_loss.py  loss.py
modules/metrics/: __init__.py  density_eval.py  gate_eval.py  metrics.py
modules/model/: ACA_CRNet.py  __init__.py  blocks.py  cafm.py  cross_modal.py  freq_aca_cr_net.py  freq_blocks.py  sar_color.py
modules/optimizer/: __init__.py
scripts/: diagnose_cpu.py  diagnose_val.py  eval_density.py  eval_gate.py  fix_arch.py  inspect_proxy_map.py  make_pptx.py  rename_module.py  train_gate.py  verify_sdi.py
tests/: test_ca_optim.py  test_clear_net.py  test_cross_modal_module.py  test_density_estimators.py  test_env_eak.py  test_fdt_loss.py  test_fdt_model.py  test_gate_estimators.py  test_lcr_model.py  test_main_training_flow.py  test_main_visualization.py  test_proxy_map_inspection.py  test_twopath_lcr_model.py
(+54 files in other folders)
