[project]
name = "cr-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cr-train",
    "matplotlib>=3.10.8",
    "torch==2.6.*",
]

[tool.uv.sources]
cr-train = { git = "https://github.com/smturtle2/cr-train.git" }
