[project]
name = "cr-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "scikit-learn>=1.5",
    "scipy>=1.14",
]

[project.optional-dependencies]
torch26 = [
    "cr-train",
    "torch==2.6.*",
]
cu129 = [
    "cr-train",
    "torch==2.11.*",
]
latest = [
    "cr-train",
    "torch>=2.11",
]

[tool.uv]
conflicts = [
    [
        { extra = "torch26" },
        { extra = "cu129" },
        { extra = "latest" },
    ],
]

[tool.uv.sources]
cr-train = { git = "https://github.com/smturtle2/cr-train.git" }
torch = [
    { index = "pytorch-cu129", extra = "cu129" },
]

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true
